# test4pkcs11

./: ApplicationResourceRecorder.cpp  ApplicationResourceRecorder.h  Makefile  configure.ac  pkcs11-api-loader.c  pkcs11-api-loader.h  pkcs11-probe.c  pkcs11-probe.h  print-current-tokens.c  symbol-from-rc.h  test.cpp
cmake/: CMakeLists.txt  bootstrap.sh
cmake/src/: helloworld.c  pkcs11-probe.c  pkcs11-probe.h
src/: GNUmakefile  config.mk.in  pkcs11-probe.c  pkcs11-probe.h  pkcs11.h  print-current-tokens.c  symbol-from-rc.c  symbol-from-rc.h  test.cpp
